# semester-work-rope

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmarks.cpp
dataset/: CMakeLists.txt  createTestsData.cpp  create_txt_dataset.cpp  generate_csv_dataset.cpp
dataset/data/: 1000.txt  10000.txt  100000.txt  5000.txt  50000.txt
dataset/data/find_split_delete/: 100(1).txt  100(10).txt  100(2).txt  100(3).txt  100(4).txt  100(5).txt  100(6).txt  100(7).txt  100(8).txt  100(9).txt  1000(1).txt  1000(10).txt  1000(2).txt  1000(3).txt  1000(4).txt  1000(5).txt  1000(6).txt  1000(7).txt  1000(8).txt  1000(9).txt  10000(4).txt  100000(10).txt  100000(3).txt  1000000(1).txt  1000000(10).txt  1000000(2).txt  1000000(4).txt  1000000(5).txt  1000000(7).txt  1000000(8).txt  25000(5).txt  25000(7).txt  250000(5).txt  250000(9).txt  2500000(1).txt  2500000(10).txt  2500000(2).txt  2500000(3).txt  2500000(4).txt  2500000(5).txt  (+26 more)
dataset/data/insert_merge/: 100(1).txt  100(10).txt  100(2).txt  100(3).txt  100(4).txt  100(5).txt  100(6).txt  100(7).txt  100(8).txt  100(9).txt  1000(1).txt  1000(10).txt  1000(2).txt  1000(3).txt  1000(4).txt  1000(5).txt  1000(6).txt  1000(7).txt  1000(8).txt  1000(9).txt  10000(6).txt  100000(1).txt  100000(10).txt  1000000(1).txt  1000000(10).txt  1000000(2).txt  1000000(3).txt  1000000(5).txt  1000000(7).txt  1000000(9).txt  25000(3).txt  25000(5).txt  250000(2).txt  250000(8).txt  2500000(1).txt  2500000(10).txt  2500000(2).txt  2500000(3).txt  2500000(4).txt  2500000(5).txt  (+25 more)
examples/: CMakeLists.txt  examples.cpp
(+2 files in other folders)
